chapter05-cloud-infra/extra-aws-terraform/03-terraform-aws-intergw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "igw-1"
  }
}
